[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "emptyhammock-project-commands"
description = "CLI for cloud and other resource management"
readme = "README.md"
license = { file = "LICENSE" }
version = "0.0.5"
requires-python = ">=3.10"
authors = [
  {name = "Jeff Trawick", email = "trawick@emptyhammock.com"}
]
keywords = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "click>=8.1.7",
    "PyYAML>=6.0.1",
    "boto3>=1.34.144",
    "docker>=7.1.0",
    "ansible>=9.7.0",
]

[project.scripts]
ehproject = "ehproject:cli"

[project.urls]
Homepage = "https://github.com/trawick/emptyhammock-project-commands"
Changelog = "https://github.com/trawick/emptyhammock-project-commands/blob/main/CHANGES.md"
Repository = "https://github.com/trawick/emptyhammock-project-commands.git"
